--- a/cmakelists/gdal/frmts/nitf/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/nitf/CMakeLists.txt
@@ -12,12 +12,13 @@ add_gdal_driver(
           rpftocfile.cpp
           nitfdes.c
           nitf_gcprpc.cpp
+          nitfwritejpeg.cpp
+          nitfwritejpeg_12.cpp
   BUILTIN)
 gdal_standard_includes(gdal_NITF)
 if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.16)
   set_property(SOURCE nitfimage.c nitffile.c nitfdes.c PROPERTY SKIP_UNITY_BUILD_INCLUSION ON)
 endif ()
-
 if (GDAL_USE_LIBTIFF_INTERNAL)
   target_include_directories(gdal_NITF PRIVATE $<TARGET_PROPERTY:libtiff,SOURCE_DIR>)
   if (RENAME_LIBTIFF_SYMBOLS)
@@ -27,7 +28,6 @@ else ()
   target_include_directories(gdal_NITF PRIVATE ${TIFF_INCLUDE_DIR})
   gdal_target_link_libraries(TARGET gdal_NITF LIBRARIES ${TIFF_LIBRARY})
 endif ()
-
 if (GDAL_USE_LIBJPEG_INTERNAL)
   target_compile_definitions(gdal_NITF PRIVATE -DJPEG_SUPPORTED)
   target_include_directories(gdal_NITF PRIVATE $<TARGET_PROPERTY:libjpeg,SOURCE_DIR>)
@@ -41,9 +41,6 @@ endif ()
 if (GDAL_USE_LIBJPEG_INTERNAL OR HAVE_JPEG)
   if (GDAL_JPEG12_SUPPORTED)
     target_compile_definitions(gdal_NITF PRIVATE -DJPEG_DUAL_MODE_8_12)
-    target_sources(gdal_NITF PRIVATE nitfwritejpeg_12.cpp)
-  else ()
-    target_sources(gdal_NITF PRIVATE nitfwritejpeg.cpp)
   endif ()
 endif ()
 target_include_directories(gdal_NITF PRIVATE $<TARGET_PROPERTY:gdal_GTIFF,SOURCE_DIR>
