Update swig script
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/swig/CMakeLists.txt
+++ b/cmakelists/gdal/swig/CMakeLists.txt
@@ -23,12 +23,14 @@ set(GDAL_SWIG_COMMON_INTERFACE_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/include/MultiDimensional.i)
 
 add_subdirectory(python)
-if (JNI_FOUND)
-  add_subdirectory(java)
-endif ()
-if (PERL_FOUND)
-  # add_subdirectory(perl)
+if (UNIX)
+  if (JNI_FOUND)
+    add_subdirectory(java)
+  endif ()
+  if (PERL_FOUND)
+    # add_subdirectory(perl)
+  endif ()
 endif ()
 if (CSHARP_FOUND)
-  # add_subdirectory(csharp)
+  add_subdirectory(csharp)
 endif ()
