--- a/cmakelists/gdal/ogr/ogrsf_frmts/grass/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/grass/CMakeLists.txt
@@ -12,19 +12,17 @@ if (USE_CPL)
 endif ()
 target_include_directories(ogr_GRASS PRIVATE ${GRASS_INCLUDE_DIR${GRASS_VERSION}} ${PostgreSQL_INCLUDE_DIRS})
 gdal_target_link_libraries(
-  TARGET
-  ogr_GRASS
-  LIBRARIES
-  -L${GRASS_PREFIX${GRASS_VERSION}}/lib
-  -lgrass_vector
-  -lgrass_dig2
-  -lgrass_dgl
-  -lgrass_rtree
-  -lgrass_linkm
-  -lgrass_dbmiclient
-  -lgrass_dbmibase
-  -lgrass_gproj
-  -lgrass_gmath
-  -lgrass_gis
-  -lgrass_datetime
-  ${PostgreSQL_LIBRARIES})
+  TARGET ogr_GRASS
+  LIBRARIES -L${GRASS_PREFIX${GRASS_VERSION}}/lib
+            -lgrass_vector
+            -lgrass_dig2
+            -lgrass_dgl
+            -lgrass_rtree
+            -lgrass_linkm
+            -lgrass_dbmiclient
+            -lgrass_dbmibase
+            -lgrass_gproj
+            -lgrass_gmath
+            -lgrass_gis
+            -lgrass_datetime
+            ${PostgreSQL_LIBRARIES})
