--- a/cmakelists/gdal/frmts/ecw/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/ecw/CMakeLists.txt
@@ -13,14 +13,7 @@ else ()
 endif ()
 gdal_standard_includes(gdal_ECW_JP2ECW)
 target_compile_definitions(gdal_ECW_JP2ECW PRIVATE -DFRMT_ecw -DDO_NOT_USE_DEBUG_BOOL)
-gdal_target_link_libraries(
-  TARGET
-  gdal_ECW_JP2ECW
-  LIBRARIES
-  ECW::ECW
-  ECW::ECWC
-  ECW::ECWnet
-  ECW::NCSUtil)
+gdal_target_link_libraries(TARGET gdal_ECW_JP2ECW LIBRARIES ECW::ECW ECW::ECWC ECW::ECWnet ECW::NCSUtil)
 foreach (d IN LISTS ECW_INCLUDE_DIRS)
   if (EXISTS "${d}/ECWJP2BuildNumber.h")
     target_compile_definitions(gdal_ECW_JP2ECW PRIVATE -DHAVE_ECW_BUILDNUMBER_H)
