--- a/cmakelists/gdal/swig/CMakeLists.txt
+++ b/cmakelists/gdal/swig/CMakeLists.txt
@@ -30,7 +30,8 @@ if (UNIX)
   if (PERL_FOUND)
     # add_subdirectory(perl)
   endif ()
-endif ()
-if (CSHARP_FOUND)
-  add_subdirectory(csharp)
+else ()
+  if (CSHARP_FOUND)
+    # add_subdirectory(csharp)
+  endif ()
 endif ()
