--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -127,10 +127,10 @@ jobs:
       run: |
         brew update
         brew outdated
-        brew uninstall gdal
         brew install postgresql || brew link --overwrite postgresql
         brew install freexl libxml2 libspatialite geos proj openjpeg giflib szip postgis poppler doxygen
         brew install ccache swig
+        rm -f /usr/local/include/vrtdataset.h
         python $GITHUB_WORKSPACE/gdal/cmake4gdal/deploy.py
         mkdir -p $GITHUB_WORKSPACE/build
     - name: Configure
